automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
 }
 
+#eric-kelly-card {
+ background-image: url("https://imgur.com/rJkR3Hn");
+}
+
+#eric-kelly-cover {
+ background-image: url("https://imgur.com/Gy2BYDP");
+}
+
 #avi-flombaum-card {
 }
 
