--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ a:visited {
 }
 
 #eric-kelly-card {
- background-image: url("https://imgur.com/rJkR3Hn");
+ background-image: url("https://i.imgur.com/rJkR3Hn.jpg");
 }
 
 #eric-kelly-cover {
