--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ a:visited {
 }
 
 #eric-kelly-cover {
- background-image: url("https://imgur.com/Gy2BYDP");
+ background-image: url("https://i.imgur.com/Gy2BYDP.jpg");
 }
 
 #avi-flombaum-card {
